--- a/portfolio.html
+++ b/portfolio.html
@@ -111,7 +111,34 @@
             <li class="portfolio-item">
               <a href="" class="link portfolio-item__link">
                 <div class="portfolio-item__img">
-                  <img src="./images/portfolio/img_1.jpg" alt="ноутбук с открытым сайтом" width="370" />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/desktop/portfoliolink1desktop.jpg    1x,
+                        ./images/portfolio/desktop/portfoliolink1desktop@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/tablet/portfoliolink1tablet.jpg    1x,
+                        ./images/portfolio/tablet/portfoliolink1tablet@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/mobile/portfoliolink1mobile.jpg    1x,
+                        ./images/portfolio/mobile/portfoliolink1mobile@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img
+                      src="./images/portfolio/desktop/portfoliolink1desktop.jpg"
+                      width="450px"
+                      alt="ноутбук с открытым сайтом"
+                    />
+                  </picture>
                   <div class="overlay">
                     <p>
                       Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
@@ -128,7 +155,34 @@
             <li class="portfolio-item">
               <a href="" class="link portfolio-item__link">
                 <div class="portfolio-item__img">
-                  <img src="./images/portfolio/img_2.jpg" alt="постер два баскетболиста" width="370" />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/desktop/portfoliolink2desktop.jpg    1x,
+                        ./images/portfolio/desktop/portfoliolink2desktop@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/tablet/portfoliolink2tablet.jpg    1x,
+                        ./images/portfolio/tablet/portfoliolink2tablet@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/mobile/portfoliolink2mobile.jpg    1x,
+                        ./images/portfolio/mobile/portfoliolink2mobile@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img
+                      src="./images/portfolio/desktop/portfoliolink2desktop.jpg"
+                      width="450px"
+                      alt="постер два баскетболиста"
+                    />
+                  </picture>
                   <div class="overlay">
                     <p></p>
                   </div>
@@ -142,7 +196,34 @@
             <li class="portfolio-item">
               <a href="" class="link portfolio-item__link">
                 <div class="portfolio-item__img">
-                  <img src="./images/portfolio/img_3.jpg" alt="логотип ресторана" width="370" />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/desktop/portfoliolink3desktop.jpg    1x,
+                        ./images/portfolio/desktop/portfoliolink3desktop@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/tablet/portfoliolink3tablet.jpg    1x,
+                        ./images/portfolio/tablet/portfoliolink3tablet@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/mobile/portfoliolink3mobile.jpg    1x,
+                        ./images/portfolio/mobile/portfoliolink3mobile@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img
+                      src="./images/portfolio/desktop/portfoliolink3desktop.jpg"
+                      width="450px"
+                      alt="логотип ресторана"
+                    />
+                  </picture>
                   <div class="overlay">
                     <p></p>
                   </div>
@@ -156,7 +237,31 @@
             <li class="portfolio-item">
               <a href="" class="link portfolio-item__link">
                 <div class="portfolio-item__img">
-                  <img src="./images/portfolio/img_4.jpg" alt="наушники" width="370" />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/desktop/portfoliolink4desktop.jpg    1x,
+                        ./images/portfolio/desktop/portfoliolink4desktop@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/tablet/portfoliolink4tablet.jpg    1x,
+                        ./images/portfolio/tablet/portfoliolink4tablet@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/mobile/portfoliolink4mobile.jpg    1x,
+                        ./images/portfolio/mobile/portfoliolink4mobile@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img src="./images/portfolio/desktop/portfoliolink4desktop.jpg" width="450px" alt="наушники" />
+                  </picture>
+
                   <div class="overlay">
                     <p></p>
                   </div>
@@ -170,7 +275,30 @@
             <li class="portfolio-item">
               <a href="" class="link portfolio-item__link">
                 <div class="portfolio-item__img">
-                  <img src="./images/portfolio/img_5.jpg" alt="две коробочки" width="370" />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/desktop/portfoliolink5desktop.jpg    1x,
+                        ./images/portfolio/desktop/portfoliolink5desktop@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/tablet/portfoliolink5tablet.jpg    1x,
+                        ./images/portfolio/tablet/portfoliolink5tablet@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/mobile/portfoliolink5mobile.jpg    1x,
+                        ./images/portfolio/mobile/portfoliolink5mobile@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img src="./images/portfolio/desktop/portfoliolink5desktop.jpg" width="450px" alt="две коробочки" />
+                  </picture>
                   <div class="overlay">
                     <p></p>
                   </div>
@@ -184,7 +312,34 @@
             <li class="portfolio-item">
               <a href="" class="link portfolio-item__link">
                 <div class="portfolio-item__img">
-                  <img src="./images/portfolio/img_6.jpg" alt="монитор для ПК" width="370" />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/desktop/portfoliolink6desktop.jpg    1x,
+                        ./images/portfolio/desktop/portfoliolink6desktop@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/tablet/portfoliolink6tablet.jpg    1x,
+                        ./images/portfolio/tablet/portfoliolink6tablet@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/mobile/portfoliolink6mobile.jpg    1x,
+                        ./images/portfolio/mobile/portfoliolink6mobile@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img
+                      src="./images/portfolio/desktop/portfoliolink6desktop.jpg"
+                      width="450px"
+                      alt="монитор для ПК"
+                    />
+                  </picture>
                   <div class="overlay">
                     <p></p>
                   </div>
@@ -198,7 +353,34 @@
             <li class="portfolio-item">
               <a href="" class="link portfolio-item__link">
                 <div class="portfolio-item__img">
-                  <img src="./images/portfolio/img_7.jpg" alt="открытая книга" width="370" />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/desktop/portfoliolink7desktop.jpg    1x,
+                        ./images/portfolio/desktop/portfoliolink7desktop@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/tablet/portfoliolink7tablet.jpg    1x,
+                        ./images/portfolio/tablet/portfoliolink7tablet@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/mobile/portfoliolink7mobile.jpg    1x,
+                        ./images/portfolio/mobile/portfoliolink7mobile@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img
+                      src="./images/portfolio/desktop/portfoliolink7desktop.jpg"
+                      width="450px"
+                      alt="открытая книга"
+                    />
+                  </picture>
                   <div class="overlay">
                     <p></p>
                   </div>
@@ -212,7 +394,30 @@
             <li class="portfolio-item">
               <a href="" class="link portfolio-item__link">
                 <div class="portfolio-item__img">
-                  <img src="./images/portfolio/img_8.jpg" alt="ярлык" width="370" />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/desktop/portfoliolink8desktop.jpg    1x,
+                        ./images/portfolio/desktop/portfoliolink8desktop@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/tablet/portfoliolink8tablet.jpg    1x,
+                        ./images/portfolio/tablet/portfoliolink8tablet@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/mobile/portfoliolink8mobile.jpg    1x,
+                        ./images/portfolio/mobile/portfoliolink8mobile@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img src="./images/portfolio/desktop/portfoliolink8desktop.jpg" width="450px" alt="ярлык" />
+                  </picture>
                   <div class="overlay">
                     <p></p>
                   </div>
@@ -226,7 +431,35 @@
             <li class="portfolio-item">
               <a href="" class="link portfolio-item__link">
                 <div class="portfolio-item__img">
-                  <img src="./images/portfolio/img_9.jpg" alt="ноутбук на столе" width="370" />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/desktop/portfoliolink9desktop.jpg    1x,
+                        ./images/portfolio/desktop/portfoliolink9desktop@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/tablet/portfoliolink9tablet.jpg    1x,
+                        ./images/portfolio/tablet/portfoliolink9tablet@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/portfolio/mobile/portfoliolink9mobile.jpg    1x,
+                        ./images/portfolio/mobile/portfoliolink9mobile@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <img
+                      src="./images/portfolio/desktop/portfoliolink9desktop.jpg"
+                      width="450px"
+                      alt="ноутбук на столе"
+                    />
+                  </picture>
+
                   <div class="overlay">
                     <p></p>
                   </div>
