--- a/index.html
+++ b/index.html
@@ -125,16 +125,29 @@
           <ul class="list about-us__list">
             <li class="about-us__item">
               <div class="about-us__thumb">
-                <img src="./images/img_1.jpg" alt="Десктопные приложения" width="370" />
+                <picture>
+                  <source srcset="./images/box/box1.jpg 1x, ./images/box/box1@2x.jpg 2x" media="(min-width: 1200px)" />
+                  <img src="./images/box/box1.jpg" alt="Десктопные приложения" width="370" />
+                </picture>
               </div>
               <h3 class="about-us__list-title">Десктопные приложения</h3>
             </li>
             <li class="about-us__item">
-              <div class="about-us__thumb"><img src="./images/img_2.jpg" alt="Мобильные приложения" width="370" /></div>
+              <div class="about-us__thumb">
+                <picture>
+                  <source srcset="./images/box/box2.jpg 1x, ./images/box/box2@2x.jpg 2x" media="(min-width: 1200px)" />
+                  <img src="./images/box/box2.jpg" alt="Мобильные приложения" width="370" />
+                </picture>
+              </div>
               <h3 class="about-us__list-title">Мобильные приложения</h3>
             </li>
             <li class="about-us__item">
-              <div class="about-us__thumb"><img src="./images/img_3.jpg" alt="Дизайнерские решения" width="370" /></div>
+              <div class="about-us__thumb">
+                <picture>
+                  <source srcset="./images/box/box3.jpg 1x, ./images/box/box3@2x.jpg 2x" media="(min-width: 1200px)" />
+                  <img src="./images/box/box3.jpg" alt="Дизайнерские решения" width="370" />
+                </picture>
+              </div>
               <h3 class="about-us__list-title">Дизайнерские решения</h3>
             </li>
           </ul>
@@ -147,7 +160,21 @@
           <ul class="list our-team__list">
             <li class="team-member">
               <div class="team-member__photo">
-                <img src="./images/photo_1.jpg" alt="фото Игорь Демьяненко" width="270" />
+                <picture>
+                  <source
+                    srcset="./images/team/desktop/i.d.desktop.jpg 1x, ./images/team/desktop/i.d.desktop@2x.jpg 2x"
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="./images/team/tablet/i.d.tablet.jpg 1x, ./images/team/tablet/i.d.tablet@2x.jpg 2x"
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="./images/team/mobile/i.d.mobile.jpg 1x, ./images/team/mobile/i.d.mobile@2x.jpg 2x"
+                    media="(max-width: 767px)"
+                  />
+                  <img src="./images/team/desktop/i.d.desktop.jpg" width="450px" alt="фото Игорь Демьяненко" />
+                </picture>
               </div>
               <div class="team-member__info">
                 <h3 class="team-member__name">Игорь Демьяненко</h3>
@@ -178,7 +205,21 @@
             </li>
             <li class="team-member">
               <div class="team-member__photo">
-                <img src="./images/photo_2.jpg" alt="фото Ольга Репина" width="270" />
+                <picture>
+                  <source
+                    srcset="./images/team/desktop/o.r.desktop.jpg 1x, ./images/team/desktop/o.r.desktop@2x.jpg 2x"
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="./images/team/tablet/o.r.tablet.jpg 1x, ./images/team/tablet/o.r.tablet@2x.jpg 2x"
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="./images/team/mobile/o.r.mobile.jpg 1x, ./images/team/mobile/o.r.mobile@2x.jpg 2x"
+                    media="(max-width: 767px)"
+                  />
+                  <img src="./images/team/desktop/o.r.desktop.jpg" width="450px" alt="фото Ольга Репина" />
+                </picture>
               </div>
               <div class="team-member__info">
                 <h3 class="team-member__name">Ольга Репина</h3>
@@ -209,7 +250,21 @@
             </li>
             <li class="team-member">
               <div class="team-member__photo">
-                <img src="./images/photo_3.jpg" alt="фото Николай Тарасов" width="270" />
+                <picture>
+                  <source
+                    srcset="./images/team/desktop/n.t.desktop.jpg 1x, ./images/team/desktop/n.t.desktop@2x.jpg 2x"
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="./images/team/tablet/n.t.tablet.jpg 1x, ./images/team/tablet/n.t.tablet@2x.jpg 2x"
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="./images/team/mobile/n.t.mobile.jpg 1x, ./images/team/mobile/n.t.mobile@2x.jpg 2x"
+                    media="(max-width: 767px)"
+                  />
+                  <img src="./images/team/desktop/n.t.desktop.jpg" width="450px" alt="фото Николай Тарасов" />
+                </picture>
               </div>
               <div class="team-member__info">
                 <h3 class="team-member__name">Николай Тарасов</h3>
@@ -240,7 +295,21 @@
             </li>
             <li class="team-member">
               <div class="team-member__photo">
-                <img src="./images/photo_4.jpg" alt="фото Михаил Ермаков" width="270" />
+                <picture>
+                  <source
+                    srcset="./images/team/desktop/m.e.desktop.jpg 1x, ./images/team/desktop/m.e.desktop@2x.jpg 2x"
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="./images/team/tablet/m.e.tablet.jpg 1x, ./images/team/tablet/m.e.tablet@2x.jpg 2x"
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="./images/team/mobile/m.e.mobile.jpg 1x, ./images/team/mobile/m.e.mobile@2x.jpg 2x"
+                    media="(max-width: 767px)"
+                  />
+                  <img src="./images/team/desktop/m.e.desktop.jpg" width="450px" alt="фото Михаил Ермаков" />
+                </picture>
               </div>
               <div class="team-member__info">
                 <h3 class="team-member__name">Михаил Ермаков</h3>
